@@ -1,5 +1,8 @@
 version 1.40
-- EXPERIMENTAL: External keyboard/controller support (for Android Input (ime) Devices) (I don't have any devices to test this with so send feedback and your presets if you want them included in the default)
+- EXPERIMENTAL: External keyboard/controller support (for Android Input (ime) Devices)
+      - enable in options 
+      - (I don't have any devices to test this with so send feedback and your presets if you want them included in the default)
+- add device sound buffer size option (user can adjust latency (but may cause crackling if too low on some devices))
 - reduce audio latency on lower frequencies
 - improve audio sync after fast forwarding
 - re-enable fast floppy access, please let me know if this toggle doesn't work for you
